recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:3: error: not found: value alerVers
		alerVers(z, t);
                ^